# dummy-python-api

./: .gitignore  Dockerfile  METRICS_VISUALIZATION.md  README.md  docker-compose.yml  manage-services.ps1  manage-services.sh  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/endpoints/v1/: finance_router.py
app/core/: config.py  exceptions.py  logging.py  metrics.py
app/schemas/: api.py
app/services/: circuit_breaker.py  coin_desk_api_service.py
grafana/: grafana.db
grafana/dashboards/: circuit_breaker_dashboard.json  http_endpoints_dashboard.json
prometheus/: prometheus.yml
tests/: test_circuit_breaker.py  test_health_check.py  test_metrics.py
