[tool.poetry]
name = "fastapi-integration-service"
version = "0.1.0"
description = "A robust API integration service based on a detailed architecture."
authors = ["Pedro Nunes <skytlepedro@hotmail.com>"]
packages = [{include = "app"}]  

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic-settings = "^2.3.4"
httpx = "^0.27.0"
tenacity = "^8.5.0" 
pybreaker = "^1.1.0" 
redis = "^5.0.7"  
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
respx = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"